[package]
name = "nash-protocol"
version = "0.1.4"
authors = ["Ethan Fast <ejhfast@gmail.com>", "Robert Annessi <robert@nash.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/nash-io/nash-rust/nash-protocol"
keywords = ["nash", "cryptography", "protocol", "graphql", "api"]
description = "state management and cryptography for interacting with nash exchange protocol"

[features]
default = ["rust_gmp"]
rust_gmp = ["nash-mpc/rust_gmp"]
num_bigint = ["nash-mpc/num_bigint"]
wasm = ["nash-mpc/wasm"]

[lib]
name = "nash_protocol"
crate-type = ["cdylib", "rlib"]

[dependencies]
bigdecimal = {version = "0.1", features = ["serde"]}
base64 = "0.12"
bs58 = { version = "0.3", features = ["check"] }
byteorder = "1.3"
graphql_client = "0.9"
hex = "0.4"
Inflector = "0.11"
nash-mpc = { version = "1.1", path = "../mpc-wallet/nash-mpc/", default-features = false }
num-traits = "0.2"
ripemd160 = "0.9"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.9"
sha3 = "0.9"
futures = "0.3.4"
futures-util = "0.3"
async-trait = "0.1.36"
thiserror = "1.0"
chrono = "0.4"
