[package]
name = "nash-protocol"
version = "0.1.16"
authors = ["Ethan Fast <ejhfast@gmail.com>", "Robert Annessi <robert@nash.io>", "Jan Kjaergaard <jan@jankjr.dk>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/nash-io/nash-rust/nash-protocol"
keywords = ["nash", "cryptography", "protocol", "graphql", "api"]
description = "state management and cryptography for interacting with nash exchange protocol"

[features]
default = ["rust_gmp", "rustcrypto"]
rustcrypto = ["k256", "nash-mpc/k256"]
libsecp256k1 = ["nash-mpc/secp256k1", "secp256k1"]
rust_gmp = ["nash-mpc/rust_gmp"]
num_bigint = ["nash-mpc/num_bigint"]
wasm = ["nash-mpc/wasm"]

[lib]
name = "nash_protocol"
crate-type = ["cdylib", "rlib"]

[dependencies]
bigdecimal = {version = "0.1", features = ["serde"]}
base64 = "0.12"
bs58 = { version = "0.3", features = ["check"] }
byteorder = "1.3"
graphql_client = "0.9"
hex = "0.4"
Inflector = "0.11"
k256 = { version = "0.5", features = ["ecdsa", "sha256"], optional = true }
nash-mpc = { version = "1.2", path = "../mpc-wallet/nash-mpc/", default-features = false }
num-traits = "0.2"
ripemd160 = "0.9"
rust-bigint = { version = "1.1", default-features = false }
secp256k1 = { version = "0.19", optional = true }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.9"
sha3 = "0.9"
futures = "0.3.4"
futures-util = "0.3"
async-trait = "0.1.36"
thiserror = "1.0"
chrono = "0.4"
