[package]
name = "nash-web-client"
version = "0.1.0"
authors = ["Christopher Lord <christopher@pliosoft.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["num_bigint", "wasm"]
rust_gmp = ["nash-protocol/rust_gmp"]
num_bigint = ["nash-protocol/num_bigint"]
wasm = ["nash-protocol/wasm"]

[dependencies]
console_error_panic_hook = { version = "0.1" }
nash-protocol = { version = "*", path = "../nash-protocol", default-features = false }
wasm-bindgen = { version = "0.2" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
