[package]
name = "mpc-wallet-elixir"
version = "1.1.2"
edition = "2018"

[lib]
name = "mpc_wallet_elixir"
crate-type = ["dylib"]

[features]
default = ["secp256k1"]
k256 = ["mpc-wallet-lib/k256"]
secp256k1 = ["mpc-wallet-lib/secp256k1"]

[dependencies]
mpc-wallet-lib = { version = "*", path = '../mpc-wallet-lib', default-features = false, features = ["rust_gmp"] }
rustler = "0.21"
serde_json = "1.0"

[profile.release]
# optimize for speed rather than for binary size
opt-level = 3
