[package]
name = "mpc-wallet-elixir"
version = "1.1.2"
edition = "2018"

[lib]
name = "mpc_wallet_elixir"
crate-type = ["dylib"]

[features]
default = ["secp256k1"]
k256 = ["nash-mpc/k256"]
secp256k1 = ["nash-mpc/secp256k1"]

[dependencies]
nash-mpc = { version = "*", path = '../nash-mpc', default-features = false, features = ["rust_gmp"] }
rustler = "0.22"
serde_json = "1.0"

[profile.release]
# optimize for speed rather than for binary size
opt-level = 3
