[package]
name = "mpc-wallet-lib"
version = "1.1.3"
edition = "2018"
description = "MPC wallet library"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["rust_gmp"]
rust_gmp = ["bigints/rust_gmp", "paillier/rust_gmp", "secp256k1"]
num_bigint = ["bigints/num_bigint", "paillier/num_bigint", "num-integer", "num-traits"]
wasm = ["chrono/wasmbind", "getrandom/wasm-bindgen", "k256"]

[dependencies]
chrono = "0.4"
generic-array = "0.14"
getrandom = "0.1"
k256 = { version = "0.5", features = ["ecdsa", "endomorphism-mul"], optional = true }
indexmap = "1.3"
lazy_static = "1.4"
p256 = { version = "0.5", features = ["ecdsa"] }
rayon = "1.3"
secp256k1 = { version = "0.19", optional = true }
serde = "1.0"
sha2 = "0.9"
subtle = "2.3"
num-integer = { version = "0.1", optional = true }
num-traits = { version = "0.2", optional = true }
zeroize = { version = "1.1", default-features = false }
bigints = { version = "*", path = '../bigints', default-features = false }
paillier = { version = "*", path = '../rust-paillier', default-features = false }

[dev-dependencies]
bincode = "1.1"
criterion = "0.3"
serde_json = "1.0"

[[bench]]
name = "client"
harness = false

[[bench]]
name = "common"
harness = false

[[bench]]
name = "server"
harness = false
