[package]
name = "mpc-wallet-lib"
version = "1.1.3"
edition = "2018"
description = "MPC wallet library"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["rust_gmp"]
rust_gmp = ["rust-bigint/rust_gmp", "paillier/rust_gmp"]
num_bigint = ["rust-bigint/num_bigint", "paillier/num_bigint", "num-integer", "num-traits"]
wasm = ["chrono/wasmbind", "getrandom/wasm-bindgen"]

[dependencies]
chrono = "0.4"
getrandom = "0.1"
indexmap = "1.3"
lazy_static = "1.4"
rayon = "1.3"
secp256k1 = { version = "0.19.0" }
serde = "1.0"
sha2 = "0.9"
subtle = "2.2"
num-integer = { version = "0.1", optional = true }
num-traits = { version = "0.2", optional = true }
amcl = { version = "0.2", default-features = false, features = ["nist256"] }
zeroize = { version = "1.1", default-features = false }
rust-bigint = "1.1.0"
paillier = { version = "*", path = '../rust-paillier', default-features = false }

[dev-dependencies]
bincode = "1.1"
criterion = "0.3"
serde_json = "1.0"

[[bench]]
name = "client"
harness = false

[[bench]]
name = "common"
harness = false

[[bench]]
name = "server"
harness = false
