[package]
name = "mpc-wallet-wasm"
version = "1.1.3"
edition = "2018"

[lib]
name = "mpc_wallet_wasm"
crate-type = ["cdylib"]

[features]
default = ["secp256k1"]
k256 = ["nash-mpc/k256"]
secp256k1 = ["nash-mpc/secp256k1"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
nash-mpc = { version = "*", default-features = false, path = '../nash-mpc', features = ["num_bigint", "wasm"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# llvm optimization level to produce faster wasm code (in terms of scalar multiplication)
opt-level = 2
# reduce binary size in favor of compile time
lto = true
