[package]
name = "nash-mpc"
version = "1.2.3"
edition = "2018"
description = "MPC wallet library providing threshold signatures for Nash exchange"
authors = ["Robert Annessi <robert@nash.io>", "Ethan Fast <ethan@nash.io>"]
license = "MIT"
repository = "https://github.com/nash-io/nash-rust/mpc-wallet/nash-mpc"
keywords = ["nash", "cryptography", "threshold", "signature", "mpc"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["rust_gmp", "k256"]
rust_gmp = ["rust-bigint/rust_gmp", "paillier-common/rust_gmp"]
num_bigint = ["rust-bigint/num_bigint", "paillier-common/num_bigint", "num-integer", "num-traits"]
wasm = ["chrono/wasmbind", "getrandom/js"]

[dependencies]
chrono = "0.4"
generic-array = "0.14"
getrandom = "0.2"
crossbeam-queue = "0.3"
k256 = { version = "0.7", features = ["ecdsa"], optional = true }
lazy_static = "1.4"
p256 = { version = "0.7", features = ["ecdsa"] }
rayon = "1.3"
secp256k1 = { version = "0.19", optional = true }
serde = "1.0"
sha2 = "0.9"
subtle = "2.3"
num-integer = { version = "0.1", optional = true }
num-traits = { version = "0.2", optional = true }
zeroize = { version = "1.1", default-features = false }
rust-bigint = { version = "1.1", default-features = false }
paillier-common = { version = "0.1", default-features = false }
hex = "0.4"

[dev-dependencies]
bincode = "1.1"
criterion = "0.3"
serde_json = "1.0"

[[bench]]
name = "client"
harness = false

[[bench]]
name = "common"
harness = false

[[bench]]
name = "server"
harness = false
