[package]
name = "paillier"
version = "1.0.1"
edition = "2018"

[features]
rust_gmp = ["rust-bigint/rust_gmp"]
num_bigint = ["rust-bigint/num_bigint", "num-traits", "num-integer"]

[dependencies]
rayon = "1.1"
serde = { version = "1.0", features = ["derive"] }
num-traits = { version = "0.2", optional = true }
num-integer = { version = "0.1", optional = true }
rust-bigint = "1.1.0"


[dev-dependencies]
bencher = "0.1"
serde_json = "1.0"

[[bench]]
name = "arith"
harness = false

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "proof"
harness = false

[[example]]
name = "basic"

[[example]]
name = "core"

[[example]]
name = "packed"
