[package]
name = "mpc-wallet-nodejs"
version = "1.1.2"
build = "build.rs"
edition = "2018"

[lib]
name = "mpc_wallet_nodejs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4"

[dependencies]
neon = "0.4"
neon-serde = "0.4"
nash-mpc = { version = "*", default-features = false, path = '../../nash-mpc', features = ["num_bigint", "k256"] }
serde_json = "1.0"

[profile.release]
# optimize for speed rather than for binary size
opt-level = 3
